# ros2-camera-node

./: .ci.yml  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
include/: camera_node_core.hpp  frame_fetcher_node.hpp  frames_fetcher_node.hpp
launch/: camera_node_demo.py  default.py
msg/: CameraProperty.msg  CameraPropertyDetails.msg  CameraPropertyMenuEntry.msg
src/: camera_node_core.cpp  frame_fetcher_node.cpp  frames_fetcher_node.cpp
srv/: CameraGetProperties.srv  CameraGetPropertyDetails.srv
